@@ -19,7 +19,7 @@
         }
         .news-item-link-text span{
             display: block;
-            font-size:2rem;
+            font-size:1rem;
             padding: 5px;
         }
 
