@@ -1,7 +1,12 @@
 Changelog::
+11 August 2018:
+        Using local storage website now remembers choice of tile size
+        
 4 August 2018:
         Slightly tweaked appearance of buttons
         Started work on remembering control choices
+
+
 31 August 2018:
         Basic implementation of custom news tile sizes. Currently resets if you click a news item.
         Added a metric france load of data to website
